# Heal

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  tq3_neon_impl.h
app/: build.gradle.kts
app/src/androidTest/java/com/example/heal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/heal/: MainActivity.kt
app/src/main/java/com/example/heal/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/heal/: ExampleUnitTest.kt
conductor/: gguf-native-architecture.md  optimize-lora-inference.md  optimize-tq3-neon.md
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  medgemma-jni.cpp
src/main/cpp/llama.cpp/ggml/include/: ggml.h
src/main/cpp/llama.cpp/ggml/src/: ggml-common.h  ggml-quants.c  ggml-quants.h
src/main/cpp/llama.cpp/ggml/src/ggml-cpu/: ggml-cpu.c  quants.c  quants.h
src/main/cpp/llama.cpp/ggml/src/ggml-cpu/arch/arm/: quants.c
src/main/cpp/llama.cpp/tools/mtmd/: clip.cpp  mtmd-helper.cpp
src/main/cpp/llama.cpp/tools/mtmd/models/: siglip.cpp
src/main/java/com/example/medgemma/: ChatViewModel.kt  GgufInferenceManager.kt  MainActivity.kt  ModelManager.kt
src/main/java/com/example/medgemma/ui/theme/: Theme.kt
src/main/res/drawable/: ic_launcher_foreground.xml
src/main/res/values/: themes.xml
